--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head> <title>idilontheinternet</title>
-    <script type= "text/javascript" src="p5.js"></script>
-    <script type= "text/javascript" src="script.js"></script>
+<head> 
+    <title>idilontheinternet</title>
+
+    <h1>Idil Kapikiran's Personal Website & Portfolio</h1>
+    <a href="/Users/idilkpkrn/Downloads/Idil Kapıkıran CV.pdf">CV of Idil Kapikiran</a>.
+
+
+    
 </head>
-<body>    
+<body>   
+    <h2>P5.JS Sketches</h2>
+    <script type= "text/javascript" src="p5.js"></script>
+    <script type= "text/javascript" src="script.js"></script> 
 </body>
 </html>
