--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <title>idilontheinternet</title>
 
     <h1>Idil Kapikiran's Personal Website & Portfolio</h1>
-    <a href="/Users/idilkpkrn/Downloads/Idil Kapıkıran CV.pdf">CV of Idil Kapikiran</a>.
-
-
     
 </head>
 <body>   
-    <h2>P5.JS Sketches</h2>
+    <iframe
+    src="https://docs.google.com/document/d/e/2PACX-1vRldC-H2bO8TAu5wUbK8f1c0JjE1jXpXYKMgPvdX7ynvgFKzVcdZn387EZd2XZiN7vLH7KpbELpSamd/pub"
+    type="application/pdf"
+    frameBorder="0"
+    scrolling="auto"
+    height="600px"
+    width="1400px"
+    ></iframe>
+    <!--<h1>P5.JS Sketches</h1>
+
     <script type= "text/javascript" src="p5.js"></script>
-    <script type= "text/javascript" src="script.js"></script> 
+
+    <script type= "text/javascript" src="script.js"></script>-->
 </body>
 </html>
