--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     height="600px"
     width="1400px"
     ></iframe>
-    
+    <h1>P5.JS Sketches</h1>
+    <a href="sketches.html">Basic Sketch</a>
 </body>
 </html>
