--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <h1>Idil Kapikiran's Personal Website & Portfolio</h1>
     
 </head>
-<body>   
+<body>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vRldC-H2bO8TAu5wUbK8f1c0JjE1jXpXYKMgPvdX7ynvgFKzVcdZn387EZd2XZiN7vLH7KpbELpSamd/pub">My current CV</a>
     <iframe
     src="https://docs.google.com/document/d/e/2PACX-1vRldC-H2bO8TAu5wUbK8f1c0JjE1jXpXYKMgPvdX7ynvgFKzVcdZn387EZd2XZiN7vLH7KpbELpSamd/pub"
     type="application/pdf"
