--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 <head> 
     <title>idilontheinternet</title>
-
     <h1>Idil Kapikiran's Personal Website & Portfolio</h1>
     
 </head>
 <body>
     <a href="https://docs.google.com/document/d/e/2PACX-1vRldC-H2bO8TAu5wUbK8f1c0JjE1jXpXYKMgPvdX7ynvgFKzVcdZn387EZd2XZiN7vLH7KpbELpSamd/pub">My current CV</a>
     <h1>P5.JS Sketches</h1>
-    <a href="sketches.html">Basic Sketch</a>
+    <a href="sketches.html">1. Dream</a>
 </body>
 </html>
