--- a/sketches.html
+++ b/sketches.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<title>My P5.JS Sketches</title>
+<title>dream</title>
 </head>
 <body>   
-
-    <h1>Dream</h1>
-
     <script type= "text/javascript" src="p5.js"></script>
     
     <script type= "text/javascript" src="script.js"></script>
