--- a/noise.html
+++ b/noise.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<title>dream</title>
+<title>noise</title>
 </head>
 <body>   
     <script type= "text/javascript" src="p5.js"></script>
     
-    <script type= "text/javascript" src="script.js"></script>
+    <script type= "text/javascript" src="noise.js"></script>
 </body>
 </html>
