--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head> 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2LCYP8RTP7"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CRFWNHHJXF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2LCYP8RTP7');
+  gtag('config', 'G-CRFWNHHJXF');
 </script>
     <title>idilontheinternet</title>
     <h1>Idil Kapikiran's Personal Website & Portfolio</h1>
