--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <a href="https://docs.google.com/document/d/e/2PACX-1vRldC-H2bO8TAu5wUbK8f1c0JjE1jXpXYKMgPvdX7ynvgFKzVcdZn387EZd2XZiN7vLH7KpbELpSamd/pub">My current CV</a>
-    <h1>P5.JS Sketches</h1>
+    <h1>P5.JS Sketches with Javascript</h1>
     <p><a href="dream.html">1. Dream</a></p>
     <p><a href="noise.html">2. Noise</a></p>
 </body>
