--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
 </head>
 <body>
-    <a href="https://docs.google.com/document/d/e/2PACX-1vTmFwoGcnXm1-Ko8rBJF0RYEhLFhuc85h7O3RSjaXOkU6qU2BjTp8vJXLade3DmnQ/pub">My current CV</a>
+    <a href="https://docs.google.com/document/d/e/2PACX-1vTmFwoGcnXm1-Ko8rBJF0RYEhLFhuc85h7O3RSjaXOkU6qU2BjTp8vJXLade3DmnQ/pub?embedded=true">My current CV</a>
     <h1>P5.JS Sketches with Javascript</h1>
     <p><a href="dream.html">1. Dream</a></p>
     <p><a href="noise.html">2. Noise</a></p>
